--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'StateManagement'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ':react-native-fbsdk-next'
+project(':react-native-fbsdk-next').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk-next/android')
