--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id_fb"/>
+      <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/app_client_token_fb"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -22,5 +24,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      
     </application>
 </manifest>
