--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "^1.7.2",
     "axios": "^1.7.9",
+    "i18next": "^24.2.2",
     "react": "18.3.1",
+    "react-i18next": "^15.4.0",
     "react-native": "^0.77.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^13.4.1",
+    "react-native-localize": "^3.4.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
