--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "^1.7.2",
@@ -23,6 +24,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-localize": "^3.4.1",
+    "react-native-onesignal": "^5.2.8",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
