--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-firebase/app": "^21.10.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@shopify/flash-list": "^1.7.2",
     "axios": "^1.7.9",
     "i18next": "^24.2.2",
